new directories and index.html has been changed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
-	<title></title>
+	<title>CV for Nathan Kwan</title>
+	<style type="text/css">
+	@import url("css/index.css");
+	</style>
 </head>
 <body>
 <center><b>I love you , Silvia! I want to be with you forever!</b></center>
